--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header secondary-bg">
         <!-- nav bar -->
          <nav>
             <h3 class="nav-title">Ni<span class="text-primary">s</span>hat</h3>
@@ -33,8 +33,29 @@
             <img class="banner-pp" src="images/hardy.png" alt="">
          </div>
     </header>
-    <main>
-
+    <main >
+        <section class="about secondary-bg">
+            <h3 class="section-title">About me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-items">
+                <div class="about-item">
+                    <p class="item-title">Name:</p>
+                    <p class="item-description">Nishat</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email:</p>
+                    <p class="item-description">nishat@gmail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Date of birth:</p>
+                    <p class="item-description">14 November 2002</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">From:</p>
+                    <p class="item-description">Los Angeles,USA</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
