--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/99a550135b.js" crossorigin="anonymous"></script>
 </head>
 <body class="open-sans-normal">
     <header class="header secondary-bg">
@@ -27,7 +28,7 @@
                 <h1 class="banner-title">Noushin  Nishat</h1>
                 <p class="banner-description dark-2">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
                 </p>
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
                 <button class="btn-primary">Contact</button>
             </div>
             <img class="banner-pp" src="images/hardy.png" alt="">
@@ -141,7 +142,7 @@
             </div>
         </div>
         <div class="text-center resume-cv">
-            <button class="btn-primary">Download CV</button>
+            <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
         </div>
     </section>
 
